--- a/Application/src/main/res/values/strings.xml
+++ b/Application/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
 -->
 <resources>
 
-    <string name="app_name_with_index">PdfRendererBasic (%1$d/%2$d)</string>
+    <string name="app_name_with_index">Viewer (%1$d/%2$d)</string>
     <string name="info">Info</string>
     <string name="previous">Previous</string>
     <string name="next">Next</string>
